<resources>
    <string name="app_name">Oh, you see!</string>
    <string name="loading">正在努力加载&#8230;</string>
    <string name="network_error">网络错误</string>
    <string name="operation_failed">操作失败</string>
    <string name="operaton_successed">操作成功</string>
    <string name="server_error">服务器错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="refresh_complete">刷新完成</string>
    <string name="shut_down_caused_by_accident">抱歉，由于意外的错误，此应用暂时无法使用</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="select_nothing">全不选</string>
    <string name="delete">删除</string>
    <string name="title_activity_sign_in">登录</string>
    <string name="signin_type">登录类型</string>
    <string name="stu_id">学（工）号</string>
    <string name="card_account">校园卡账号</string>
    <string name="card_query_password">校园卡查询密码</string>
    <string name="checkcode">验证码</string>
    <string name="signin_checkcode_image">验证码图片</string>
    <string name="signin">登录</string>
    <string name="stu_id_input_hint">请输入学（工）号</string>
    <string name="card_account_input_hint">请输入校园卡账号</string>
    <string name="password_input_hint">请输入校园卡查询密码</string>
    <string name="checkcode_input_hint">请输入验证码</string>
    <string name="auto_signin">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="signin_pic_below">登录界面下方的图片</string>
    <string name="signin_stu_id_is_empty">学（工）号不能为空</string>
    <string name="signin_card_account_is_empty">校园卡账号不能为空</string>
    <string name="signin_account_not_exists">帐号查询条件不足</string>
    <string name="signin_password_is_empty">查询密码不能为空</string>
    <string name="signin_password_is_wrong">查询密码错误</string>
    <string name="signin_checkcode_is_empty">验证码不能为空</string>
    <string name="signin_checkcode_is_wrong">验证码不正确</string>
    <string name="signin_hint_click_image_if_not_clear">看不清？点击图片换一张</string>
    <string name="signin_error_when_encrypting">数据加密出错！</string>
    <string name="signin_error_when_decrypting">数据解密出错！</string>
    <string name="signin_processing">正在登录&#8230;</string>
    <string name="signin_processing_automatically">正在自动登录&#8230;</string>
    <string name="signin_success">登录成功</string>
    <string name="signin_failed">登录失败</string>
    <string name="signin_automatically_success">自动登录成功</string>
    <string name="signin_automatically_failed">自动登录失败</string>
    <string name="signin_the_card_has_been_reported_loss">抱歉，该校园卡已挂失，请解挂后再登录</string>
    <string name="title_activity_main">Oh, you see!</string>
    <string name="manage">校园卡管理</string>
    <string name="lost_found">丢失和拾获</string>
    <string name="information">消息通知</string>
    <string name="settings">设置</string>
    <string name="basic_information">基本信息</string>
    <string name="trading_inquiry">流水查询</string>
    <string name="report_loss_card">校园卡挂失</string>
    <string name="recharge">转账充值</string>
    <string name="net_charge">网络缴费</string>
    <string name="change_password">修改密码</string>
    <string name="main_top_pic">界面上方展示的图片</string>
    <string name="grid_view_item_img_content_description">grid_view子项的图片</string>
    <string name="hint_start_report_loss_warning_title">您确定要挂失吗？</string>
    <string name="hint_start_report_loss_warning_content">挂失后您将暂时无法登录本应用，解挂后会恢复正常。</string>
    <string name="charge_is_not_available">抱歉，暂时未开放此项功能。敬请期待。</string>
    <string name="title_activity_manage_basic_information">基本信息</string>
    <string name="fail_to_get_data">数据获取失败</string>
    <string name="name">姓名</string>
    <string name="balance">校园卡余额</string>
    <string name="bank_account">银行卡号</string>
    <string name="current_transition">当前过渡余额</string>
    <string name="last_transition">上次过渡余额</string>
    <string name="report_loss_state">挂失状态</string>
    <string name="freeze_state">冻结状态</string>
    <string name="identity_type">身份类型</string>
    <string name="department">部门名称</string>
    <string name="title_activity_manage_trading_inquiry">流水查询</string>
    <string name="history_trading_inquiry">历史流水</string>
    <string name="day_trading_inquiry">当日流水</string>
    <string name="week_trading_inquiry">一周流水</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="set_start_time">设置起始时间</string>
    <string name="set_end_time">设置结束时间</string>
    <string name="display_date_format">yyyy年MM月dd日</string>
    <string name="query">查询</string>
    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="error_day_of_week">ErrorDay!</string>
    <string name="trading_time">交易时间：</string>
    <string name="merchant_name">商户名称：</string>
    <string name="trading_name">交易名称：</string>
    <string name="transaction_amount">交易金额：￥</string>
    <string name="balance_after_trading">交易后卡余额：￥</string>
    <string name="start_and_end_date">起止日期：</string>
    <string name="today_total_transaction_amount">今日总消费金额：￥</string>
    <string name="week_total_transaction_amount">本周总消费金额：￥</string>
    <string name="total_transaction_amount">本段时间总消费金额：￥</string>
    <string name="title_menu_info">相关信息</string>
    <string name="is_loading">正在加载，请稍候&#8230;</string>
    <string name="title_activity_manage_report_loss">挂失校园卡</string>
    <string name="report_loss_password_hint">请输入校园卡查询密码</string>
    <string name="report_loss_checkcode_image">挂失验证码图片</string>
    <string name="report_loss_password_is_empty">查询密码不能为空！</string>
    <string name="report_loss_wrong_password">查询密码错误！</string>
    <string name="report_loss">挂失</string>
    <string name="report_loss_success">挂失成功！</string>
    <string name="report_loss_the_card_has_been_reported_loss">您的校园卡已经挂失，请勿重复操作。</string>
    <string name="title_activity_manage_change_password">修改查询密码</string>
    <string name="change_password_new_card_query_password">新查询密码</string>
    <string name="change_password_new_card_query_password_input_hint">请输入新的查询密码</string>
    <string name="change_password_confirm_new_card_query_password">确认新的查询密码</string>
    <string name="change_password_confirm_new_card_query_password_input_hint">请再次输入新的查询密码</string>
    <string name="change_password_old_password_is_empty">必须先输入旧的查询密码</string>
    <string name="change_password_new_password_is_empty">新的查询密码不能为空</string>
    <string name="change_password_confirm_new_password_is_empty">必须再次输入新密码进行确认</string>
    <string name="change_password_input_is_short">输入不足6位</string>
    <string name="change_password_the_two_inputs_are_not_same">两次输入不一致</string>
    <string name="change_password_success">修改成功！</string>
    <string name="change_password_failed">修改失败</string>
    <string name="change_password_password_is_wrong">查询密码错误</string>
    <string name="title_activity_manage_net_charge">网络缴费</string>
    <string name="net_balance">校园网余额</string>
    <string name="net_account_is_not_exist">未找到该账号！无法完成缴费！</string>
    <string name="net_charge_amount_title">缴费金额（元）</string>
    <string name="net_charge_amount_input_hint">请输入缴费金额（元）</string>
    <string name="net_charge_amount_input_helper_text">输入金额必须为10的倍数，且不大于120元</string>
    <string name="net_charge_amount_input_is_null">输入金额不能为空</string>
    <string name="net_charge_amount_input_is_not_the_multiple_of_ten">输入的金额不正确，请确保输入的金额是10的倍数</string>
    <string name="net_charge_amount_input_is_invalid">输入金额的范围无效</string>
    <string name="net_charge_password_is_empty">查询密码不能为空</string>
    <string name="net_charge_wrong_password">查询密码错误</string>
    <string name="lost_and_found_info_browsing">失卡招领信息浏览</string>
    <string name="card_loss_registration">丢失卡登记</string>
    <string name="lost_and_found_info_browsing_img_des">失卡招领信息浏览配图</string>
    <string name="card_loss_registration_img_des">丢失卡登记配图</string>
    <string name="title_activity_lost_and_found_information_browsing">失卡招领信息浏览</string>
    <string name="loading_complete">加载完成！</string>
    <string name="total_queried_events">共搜索到</string>
    <string name="in_records">条记录</string>
    <string name="not_founded">未招领</string>
    <string name="founded">已招领</string>
    <string name="view_detail">查看详细信息</string>
    <string name="publish_time">发布时间</string>
    <string name="title_activity_lost_and_found_information_browsing_view_detail">失卡招领详细信息</string>
    <string name="number_point">—— No.</string>
    <string name="contact">联系方式</string>
    <string name="lost_place">丢卡地点</string>
    <string name="description">说明</string>
    <string name="state">招领状态</string>
    <string name="card_in_lost_state">丢失卡</string>
    <string name="card_has_been_founded">已招领</string>
    <string name="found_time">招领时间</string>
    <string name="send_message_to_ta">向Ta发送消息</string>
    <string name="title_activity_lost_and_found_registration">丢失卡登记</string>
    <string name="lost_registration">丢失卡登记</string>
    <string name="save">保存</string>
    <string name="lost_and_found_registration_contact_hint">联系方式 （必填，7—15位）</string>
    <string name="lost_and_found_registration_lost_place_hint">丢卡地点 （必填，最多128个字符）</string>
    <string name="lost_and_found_registration_description_hint">说明 （选填，最多256个字符）</string>
    <string name="save_error">保存失败！</string>
    <string name="pick_up_card">标记为已招领</string>
    <string name="lost_and_found_registration_contact_is_empty">联系方式不能为空</string>
    <string name="lost_and_found_registration_contact_is_too_short">联系方式不能少于7位</string>
    <string name="lost_and_found_registration_lost_place_is_empty">丢失地点不能为空</string>
    <string name="lost_and_found_registration_save_check_title">保存并提交</string>
    <string name="lost_and_found_registration_save_check_content">保存后将无法修改，您确定保存并提交吗？
        友情提示：这项操作只是帮助您招领而非挂失校园卡，保存后可去失卡招领信息中查看。</string>
    <string name="lost_and_found_registration_pick_up_card_title">招领卡片</string>
    <string name="lost_and_found_registration_pick_up_card_content">在找到卡片或者已经补办卡片后，您可以选择将卡片标记为已招领。您确定进行此项操作吗？</string>
    <string name="messages_inbox">收件箱</string>
    <string name="messages_sent">已发送</string>
    <string name="messages_send">发消息</string>
    <string name="messages_board">留言板</string>
    <string name="messages_questions">常见问题</string>
    <string name="title_activity_messages_inbox">收件箱</string>
    <string name="title_activity_messages_sent">已发送</string>
    <string name="has_selected">已选择</string>
    <string name="item">项</string>
    <string name="confirm_to_delete">您确定要删除这</string>
    <string name="question_mark">条消息吗？</string>
    <string name="confirm_to_delete_one">您确定要删除这条消息吗？</string>
    <string name="success_to_delete">删除成功！</string>
    <string name="fail_to_delete">删除失败！</string>
    <string name="title_activity_messages_create_notice">发消息</string>
    <string name="send">发送</string>
    <string name="notice_title">标题</string>
    <string name="notice_title_hint">请输入消息标题，应小于50个字符</string>
    <string name="notice_title_null_error">标题不能为空</string>
    <string name="send_to">发给</string>
    <string name="add_receiver_hint">学工号/姓名/校园卡账号</string>
    <string name="add_receiver_null_input_error">接收人不能为空</string>
    <string name="add_receiver_duplicate_error">不能重复添加</string>
    <string name="add_receiver_list_is_null">尚未添加任何接收人到列表</string>
    <string name="add_receiver_can_not_found_user">添加失败，用户不存在</string>
    <string name="add_receiver_failure">发生错误，添加失败</string>
    <string name="add_receiver_flow_layout_hint">提示：需要点击“+”按钮将接收人添加到列表</string>
    <string name="notice_content">请输入消息内容，应小于200个字符</string>
    <string name="notice_content_null_error">消息内容不能为空</string>
    <string name="send_success">发送成功！</string>
    <string name="send_failure">发送失败，请重试</string>
    <string name="title_activity_messages_notice_detail">消息详情</string>
    <string name="sender">发&#160;&#160;送&#160;&#160;人：</string>
    <string name="submit">提交</string>
</resources>