<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.duang.easyecard.Activity.LostAndFoundFragment">

    <LinearLayout
        android:id="@+id/lost_and_found_fragment_info_browsing_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/green_button_selector"
            android:text="@string/lost_and_found_info_browsing"/>
        <ImageView
            android:id="@+id/lost_and_found_fragment_info_browsing_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/lost_and_found_info_browsing_img_des"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lost_and_found_fragment_report_loss_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/card_loss_registration"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/skyblue_button_selector"/>
        <ImageView
            android:id="@+id/lost_and_found_fragment_report_loss_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/card_loss_registration_img_des"/>
    </LinearLayout>

</LinearLayout>
