<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.duang.easyecard.Activity.ManageReportLossActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 信息 -->
        <br.com.dina.ui.widget.UITableView
            android:id="@+id/manage_report_loss_information_table_view"
            style="@style/UITableView"
            android:layout_marginTop="20dp" />

        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_view_rounded_corner"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <!-- 查询密码 -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/manage_report_loss_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/report_loss_password_hint"
                android:inputType="numberPassword"
                android:maxLength="6"
                app:met_clearButton="true"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/card_query_password"
                app:met_maxCharacters="6"
                app:met_primaryColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <com.rey.material.widget.Button
            android:id="@+id/manage_report_loss_button"
            style="@style/Material.Drawable.Ripple.Wave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/red_button_selector"
            android:onClick="onReportLossButtonClick"
            android:text="@string/report_loss"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
